--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Projeto 2",
   "short_name": "Projeto 2",
-  "start_url": "/projeto-2-devweb/?home=true",
+  "start_url": "/",
   "icons": [
     {
       "src": "icons/manifest-icon-192.maskable.png",
